[package]
name = "front_matter"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]

[dependencies]
tera = { version = "1.0.0-alpha.2", path = "/home/vincent/Code/tera" }
chrono = "0.4"
serde = "1"
serde_derive = "1"
toml = "0.4"
regex = "1"
lazy_static = "1"

errors = { path = "../errors" }
utils = { path = "../utils" }
