[package]
name = "utils"
version = "0.1.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]

[dependencies]
errors = { path = "../errors" }
tera = { version = "1.0.0-alpha.2", path = "/home/vincent/Code/tera" }
unicode-segmentation = "1.2"
walkdir = "2"
toml = "0.4"
serde = "1"

[dev-dependencies]
tempfile = "3"
